--- a/pytest.ini
+++ b/pytest.ini
@@ -10,9 +10,10 @@ python_files = test_*.py
 python_functions = test_*
 # python_functions: which test functions and methods are considered tests
 
-required_plugins = pytest-randomly
+required_plugins = pytest-randomly pytest-qt pytest-xvfb
 # required_plugins: plugins that must be present for pytest to run
 # pytest-randomly: forces your tests to run in a random order
+# pytest-qt: allows for writing tests for PyQt5, PyQt6, PySide2 and PySide6 applications.
 
 xfail_strict = True
 # xfail_strict = True: tests marked with @pytest.mark.xfail that actually succeed will by default fail the test suite
