--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         else
           source pyenv/bin/activate
         fi
-        python -m pip install aqt[qt5]==${{ matrix.anki }} aqt[qt6]==${{ matrix.anki }} anki==${{ matrix.anki }} pylint==2.17.5 pytest==7.4.2 pytest-randomly==3.15.0 pytest-qt==4.2.0 pytest-xvfb==3.0.0
+        python -m pip install -r requirements.txt
     - name: Lint
       shell: bash
       run: |
