--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ required_plugins = pytest-randomly pytest-qt pytest-xvfb
 # required_plugins: plugins that must be present for pytest to run
 # pytest-randomly: forces your tests to run in a random order
 # pytest-qt: allows for writing tests for PyQt5, PyQt6, PySide2 and PySide6 applications.
+# pytest-xvfb: allows tests to be run without windows popping up during GUI tests or on systems without a display (like a CI).
 
 xfail_strict = True
 # xfail_strict = True: tests marked with @pytest.mark.xfail that actually succeed will by default fail the test suite
