--- a/pytest.ini
+++ b/pytest.ini
@@ -10,7 +10,7 @@ python_files = test_*.py
 python_functions = test_*
 # python_functions: which test functions and methods are considered tests
 
-required_plugins = pytest-randomly pytest-qt pytest-xvfb
+required_plugins = pytest-random-order pytest-qt pytest-xvfb
 # required_plugins: plugins that must be present for pytest to run
 # pytest-randomly: forces your tests to run in a random order
 # pytest-qt: allows for writing tests for PyQt5, PyQt6, PySide2 and PySide6 applications.
@@ -19,13 +19,16 @@ required_plugins = pytest-randomly pytest-qt pytest-xvfb
 xfail_strict = True
 # xfail_strict = True: tests marked with @pytest.mark.xfail that actually succeed will by default fail the test suite
 
-addopts = --strict-markers --durations=5 --maxfail=1
+addopts = --strict-markers --durations=5 --maxfail=1 --random-order
 # addopts: set of command line arguments as if they had been specified by the user
 # --strict-markers: markers not registered in the `markers` section of the configuration file raise errors.
 # --durations=5: show N slowest setup/test durations (N=0 for all)
 # --maxfail=1: exit after first num failures or errors.
+# --random-order: enable randomisation.
 
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
+    recalc: recalc tests
 
 # markers: whitelist custom markers
+# example with: pytest -m slow
