--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ aqt[qt6]==2.1.66
 anki==2.1.66
 pylint==2.17.5
 pytest==7.4.2
-pytest-randomly==3.15.0
+pytest-random-order==1.1.0
 pytest-qt==4.2.0
 pytest-xvfb==3.0.0
