--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,32 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-        files: 'ankimorphs/|tests/'
+        files: 'ankimorphs/|^tests/'
   # Using this mirror lets us use mypyc-compiled black, which is about 2x faster
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.9.1
     hooks:
       - id: black
-        files: 'ankimorphs/|tests/'
+        files: 'ankimorphs/|^tests/'
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        require_serial: true
+        types: [ python ]
+        files: 'ankimorphs/|^tests/'
+        exclude: |
+          (?x)^(
+              ankimorphs/deps/.*|
+              ankimorphs/readability_settings_ui.py|
+              ankimorphs/adaptiveSubs.py|
+              ankimorphs/readability.py|
+              ankimorphs/readability_ui.py|
+              ankimorphs/preferencesDialog.py|
+              ankimorphs/config.py|
+              tests/fake_preferences.py|
+          )$
 default_language_version:
   python: python3.11
