added pytest to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,5 +36,11 @@ repos:
               ankimorphs/config.py|
               tests/fake_preferences.py|
           )$
+      - id: pytest
+        name: pytest
+        entry: pytest
+        language: system
+        pass_filenames: false
+        always_run: true
 default_language_version:
   python: python3.11
