--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,23 @@ repos:
     hooks:
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.12.0
+    hooks:
+      - id: pyupgrade
+        args: [--py39-plus]
+        files: 'ankimorphs/|^tests/'
+        exclude: |
+          (?x)^(
+              ankimorphs/deps/.*|
+              ankimorphs/readability_settings_ui.py|
+              ankimorphs/adaptiveSubs.py|
+              ankimorphs/readability.py|
+              ankimorphs/readability_ui.py|
+              ankimorphs/preferencesDialog.py|
+              ankimorphs/config.py|
+              tests/fake_preferences.py|
+          )$
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
