--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: check-yaml
       - id: check-added-large-files
+      - id: check-json
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.12.0
     hooks:
