--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -7,6 +7,7 @@
   "path_mature": "mature.db",
   "path_known": "known.db",
   "path_seen": "seen.db",
+  "path_cards": "cards.db",
   "path_log": "morphman.log",
   "path_stats": "morphman.stats",
   "threshold_mature": 21,
