--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -22,23 +22,14 @@
   "set learn now key": "Ctrl+Alt+N",
   "set mass tagger key": "Ctrl+Alt+T",
   "set view morphemes key": "Ctrl+Alt+V",
-  "set bold unknowns key": "Ctrl+Alt+B",
   "auto skip alternatives": true,
   "print number of alternatives skipped": true,
-  "loadAllDb": true,
-  "saveDbs": true,
-  "saveSQLite": false,
   "set due based on mmi": true,
   "ignore maturity": false,
-  "batch media fields": [
-    "Video",
-    "Sound"
-  ],
   "min good sentence length": 2,
   "max good sentence length": 30,
   "reinforce new vocab weight": 5.0,
   "verb bonus": 0,
-  "priority.db weight": 200,
   "frequency.txt bonus": 100000,
   "no priority penalty": 1000000,
   "only update k+2 and below": false,
@@ -88,28 +79,6 @@
   "Option_IgnoreRoundBracketContents": true,
   "Option_IgnoreSlimRoundBracketContents": true,
   "Option_IgnoreSuspendedLeeches": true,
-  "Option_ProperNounsAlreadyKnown": true,
-  "Option_AnalysisInputPath": "",
-  "Option_MasterFrequencyListPath": "",
-  "Option_DefaultMinimumMasterFrequency": 0,
-  "Option_DefaultStudyTarget": 98.0,
-  "Option_OptimalMasterTarget": 0.0,
-  "Option_SourceScorePower": 2.0,
-  "Option_SourceScoreMultiplier": 60.0,
-  "Option_SaveWordReport": false,
-  "Option_SaveMissingWordReport": false,
-  "Option_SaveReadabilityDB": false,
-  "Option_SaveStudyPlan": false,
-  "Option_SaveFrequencyList": false,
-  "Option_MigakuDictionaryFreq": false,
-  "Option_GroupByDir": false,
-  "Option_ProcessLines": false,
-  "Option_FillAllMorphsInStudyPlan": true,
-  "Option_AlwaysAddMinFreqMorphs": false,
-  "Option_AlwaysMeetReadabilityTarget": false,
-  "Option_ResetLearnedAfterEachInput": false,
-  "Option_SaveSeparateWordReports": false,
-  "Option_OutputReadabilityDb": false,
-  "Option_EnableWebService": false
+  "Option_ProperNounsAlreadyKnown": true
 }
 
