--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -1,31 +1,11 @@
 {
-  "my-var": 5,
-  "path_priority": "priority.db",
-  "path_ext": "external.db",
-  "path_frequency": "frequency.txt",
-  "path_all": "all.db",
-  "path_mature": "mature.db",
-  "path_known": "known.db",
-  "path_seen": "seen.db",
-  "path_cards": "cards.db",
-  "path_log": "morphman.log",
-  "path_stats": "morphman.stats",
-  "threshold_mature": 21,
-  "threshold_known": 0.8200,
-  "threshold_seen": 0.86400,
-  "text file import maturity": 22,
   "browse same focus key": "l",
   "browse same focus key non vocab": "Shift+l",
   "set known and skip key": "k",
-  "set batch play key": "Ctrl+Alt+P",
-  "set extract morphemes key": "Ctrl+Alt+E",
   "set learn now key": "Ctrl+Alt+N",
-  "set mass tagger key": "Ctrl+Alt+T",
   "set view morphemes key": "Ctrl+Alt+V",
   "auto skip alternatives": true,
   "print number of alternatives skipped": true,
-  "set due based on mmi": true,
-  "ignore maturity": false,
   "min good sentence length": 2,
   "max good sentence length": 30,
   "reinforce new vocab weight": 5.0,
@@ -33,16 +13,13 @@
   "frequency.txt bonus": 100000,
   "no priority penalty": 1000000,
   "only update k+2 and below": false,
-  "next new card feature": true,
-  "new card merged fill": false,
-  "new card merged fill min due": 100000,
-  "Field_FocusMorph": "focus_morph",
-  "Field_MorphManIndex": "morphman_index",
-  "Field_Unmatures": "morphman_unmatures",
-  "Field_UnmatureMorphCount": "morphman_unmature_morph_count",
-  "Field_Unknowns": "morphman_unknowns",
-  "Field_UnknownFreq": "morphman_unknown_freq",
-  "Field_UnknownMorphCount": "morphman_unknown_morph_count",
+  "Field_FocusMorph": "",
+  "Field_MorphManIndex": "",
+  "Field_Unmatures": "",
+  "Field_UnmatureMorphCount": "",
+  "Field_Unknowns": "",
+  "Field_UnknownFreq": "",
+  "Field_UnknownMorphCount": "",
   "Field_FocusMorphPos": "",
   "Tag_Comprehension": "mm_comprehension",
   "Tag_Vocab": "mm_vocab",
@@ -55,20 +32,17 @@
   "Tag_Frequency": "mm_frequency",
   "Filter": [
     {
-      "Type": "SubtitleMemorize",
-      "TypeId": null,
+      "Type": "",
+      "TypeId": "",
       "Tags": [
         ""
       ],
-      "Fields": [
-        "Japanese"
-      ],
-      "Morphemizer": "MecabMorphemizer",
+      "Fields": "",
+      "Morphemizer": "",
       "Read": true,
       "Modify": true
     }
   ],
-  "ReplaceRules": [],
   "Option_SetNotRequiredTags": true,
   "Option_SkipComprehensionCards": true,
   "Option_SkipFreshVocabCards": true,
