--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -1,58 +1,55 @@
 {
-  "browse same focus key": "l",
-  "browse same focus key non vocab": "Shift+l",
-  "set known and skip key": "k",
-  "set learn now key": "Ctrl+Alt+N",
-  "set view morphemes key": "Ctrl+Alt+V",
-  "auto skip alternatives": true,
-  "print number of alternatives skipped": true,
-  "min good sentence length": 2,
-  "max good sentence length": 30,
-  "reinforce new vocab weight": 5.0,
-  "verb bonus": 0,
-  "frequency.txt bonus": 100000,
-  "no priority penalty": 1000000,
-  "only update k+2 and below": false,
-  "Field_FocusMorph": "",
-  "Field_MorphManIndex": "",
-  "Field_Unmatures": "",
-  "Field_UnmatureMorphCount": "",
-  "Field_Unknowns": "",
-  "Field_UnknownFreq": "",
-  "Field_UnknownMorphCount": "",
-  "Field_FocusMorphPos": "",
-  "Tag_Comprehension": "mm_comprehension",
-  "Tag_Vocab": "mm_vocab",
-  "Tag_Fresh": "mm_fresh",
-  "Tag_NotReady": "mm_notReady",
-  "Tag_AlreadyKnown": "mm_alreadyKnown",
-  "Tag_Priority": "mm_priority",
-  "Tag_TooShort": "mm_tooShort",
-  "Tag_TooLong": "mm_tooLong",
-  "Tag_Frequency": "mm_frequency",
-  "Filter": [
+  "shortcut_browse_same_focus_morph": "l",
+  "shortcut_browse_same_focus_morph_all": "Shift+l",
+  "shortcut_set_known_and_skip": "k",
+  "shortcut_learn_now": "Ctrl+Alt+N",
+  "shortcut_view_morphemes": "Ctrl+Alt+V",
+  "skip_comprehension_cards": true,
+  "skip_fresh_vocab_cards": true,
+  "skip_focus_morph_seen_today": true,
+  "skip_print_number_of_alternatives_skipped": true,
+  "recalc_ignore_suspended_leeches": true,
+  "recalc_always_prioritize_frequency_morphs": false,
+  "recalc_min_good_sentence_length": 2,
+  "recalc_max_good_sentence_length": 30,
+  "recalc_reinforce_new_vocab_weight": 5.0,
+  "recalc_verb_bonus": 0,
+  "recalc_only_update_cards_with_less_than_unknowns": 3,
+  "parse_ignore_grammar_position": false,
+  "parse_ignore_bracket_contents": true,
+  "parse_ignore_round_bracket_contents": true,
+  "parse_ignore_slim_round_bracket_contents": true,
+  "parse_proper_nouns_already_known": true,
+  "extra_field_focus_morph": "",
+  "extra_field_difficulty": "",
+  "extra_field_unmatures": "",
+  "extra_field_unmature_morph_count": "",
+  "extra_field_unknowns": "",
+  "extra_field_unknown_freq": "",
+  "extra_field_unknown_morph_count": "",
+  "extra_field_part_of_speech": "",
+  "tag_comprehension": "am_comprehension",
+  "tag_vocab": "am_vocab",
+  "tag_fresh": "am_fresh",
+  "tag_not_ready": "am_notReady",
+  "tag_already_known": "am_alreadyKnown",
+  "tag_priority": "am_priority",
+  "tag_too_short": "am_tooShort",
+  "tag_too_long": "am_tooLong",
+  "tag_frequency": "am_frequency",
+  "tag_set_not_required_tags": true,
+  "filter": [
     {
-      "Type": "",
-      "TypeId": "",
-      "Tags": [
+      "type": "",
+      "type_id": "",
+      "tags": [
         ""
       ],
-      "Fields": "",
-      "Morphemizer": "",
-      "Read": true,
-      "Modify": true
+      "field": "",
+      "morphemizer": "",
+      "read": true,
+      "modify": true
     }
-  ],
-  "Option_SetNotRequiredTags": true,
-  "Option_SkipComprehensionCards": true,
-  "Option_SkipFreshVocabCards": true,
-  "Option_SkipFocusMorphSeenToday": true,
-  "Option_IgnoreGrammarPosition": false,
-  "Option_AlwaysPrioritizeFrequencyMorphs": false,
-  "Option_IgnoreBracketContents": true,
-  "Option_IgnoreRoundBracketContents": true,
-  "Option_IgnoreSlimRoundBracketContents": true,
-  "Option_IgnoreSuspendedLeeches": true,
-  "Option_ProperNounsAlreadyKnown": true
+  ]
 }
 
