--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -43,9 +43,9 @@
       "type": "",
       "type_id": "",
       "tags": [
-        ""
+        "fake", "news"
       ],
-      "field": "",
+      "field": "meh",
       "morphemizer": "",
       "read": true,
       "modify": true
