--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -10,9 +10,11 @@
   "skip_print_number_of_alternatives_skipped": true,
   "recalc_ignore_suspended_leeches": true,
   "recalc_always_prioritize_frequency_morphs": false,
-  "recalc_min_good_sentence_length": 2,
-  "recalc_max_good_sentence_length": 30,
-  "recalc_only_update_cards_with_less_than_unknowns": 3,
+  "recalc_preferred_sentence_length": 7,
+  "recalc_unknown_morphs_count": 3,
+  "recalc_before_sync": false,
+  "recalc_prioritize_collection": true,
+  "recalc_prioritize_textfile": false,
   "parse_ignore_grammar_position": false,
   "parse_ignore_bracket_contents": true,
   "parse_ignore_round_bracket_contents": true,
