added confirmation on delete row settings

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -30,7 +30,8 @@
       "note_type_id": null,
       "tags": [""],
       "field": "",
-      "morphemizer": "",
+      "morphemizer_description": "",
+      "morphemizer_name": "",
       "read": true,
       "modify": true,
       "focus_morph": "",
