added default settings exception to recalc

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -1,34 +1,11 @@
 {
-  "shortcut_recalc": "Ctrl+M",
-  "shortcut_settings": "Ctrl+O",
-  "shortcut_browse_same_unknown_ripe": "L",
-  "shortcut_browse_same_unknown_ripe_budding": "Shift+L",
-  "shortcut_set_known_and_skip": "K",
-  "shortcut_learn_now": "Ctrl+Alt+N",
-  "shortcut_view_morphemes": "Ctrl+Alt+V",
-  "skip_stale_cards": true,
-  "skip_unknown_morph_seen_today_cards": true,
-  "skip_show_num_of_skipped_cards": true,
-  "recalc_ignore_suspended_leeches": true,
-  "recalc_always_prioritize_frequency_morphs": false,
-  "recalc_preferred_sentence_length": 7,
-  "recalc_unknown_morphs_count": 3,
-  "recalc_before_sync": false,
-  "recalc_prioritize_collection": true,
-  "recalc_prioritize_textfile": false,
-  "parse_ignore_bracket_contents": true,
-  "parse_ignore_round_bracket_contents": true,
-  "parse_ignore_slim_round_bracket_contents": true,
-  "parse_ignore_proper_nouns": true,
-  "parse_ignore_suspended_cards_content": true,
-  "tag_ripe": "ripe",
-  "tag_budding": "budding",
-  "tag_stale": "stale",
   "filters": [
     {
       "note_type": "",
       "note_type_id": null,
-      "tags": [""],
+      "tags": [
+        ""
+      ],
       "field": "",
       "field_index": null,
       "morphemizer_description": "",
@@ -39,6 +16,31 @@
       "highlighted": "",
       "difficulty": ""
     }
-  ]
+  ],
+  "parse_ignore_bracket_contents": true,
+  "parse_ignore_proper_nouns": true,
+  "parse_ignore_round_bracket_contents": true,
+  "parse_ignore_slim_round_bracket_contents": true,
+  "parse_ignore_suspended_cards_content": true,
+  "recalc_always_prioritize_frequency_morphs": false,
+  "recalc_before_sync": false,
+  "recalc_ignore_suspended_leeches": true,
+  "recalc_preferred_sentence_length": 7,
+  "recalc_prioritize_collection": true,
+  "recalc_prioritize_textfile": false,
+  "recalc_unknown_morphs_count": 3,
+  "shortcut_browse_same_unknown_ripe": "L",
+  "shortcut_browse_same_unknown_ripe_budding": "Shift+L",
+  "shortcut_learn_now": "Ctrl+Alt+N",
+  "shortcut_recalc": "Ctrl+M",
+  "shortcut_set_known_and_skip": "K",
+  "shortcut_settings": "Ctrl+O",
+  "shortcut_view_morphemes": "Ctrl+Alt+V",
+  "skip_show_num_of_skipped_cards": true,
+  "skip_stale_cards": true,
+  "skip_unknown_morph_seen_today_cards": true,
+  "tag_budding": "budding",
+  "tag_ripe": "ripe",
+  "tag_stale": "stale"
 }
 
