--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -12,9 +12,12 @@
       "morphemizer_name": "",
       "read": true,
       "modify": true,
-      "focus_morph": "",
-      "highlighted": "",
-      "difficulty": ""
+      "focus_morph_field": "",
+      "focus_morph_field_index": null,
+      "highlighted_field": "",
+      "highlighted_field_index": null,
+      "difficulty_field": "",
+      "difficulty_field_index": null
     }
   ],
   "parse_ignore_bracket_contents": true,
