made imports implicit

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "package": "AnkiMorphs",
-  "name": "AnkiMorphs",
+  "package": "ankimorphs-alpha",
+  "name": "ankimorphs-alpha",
   "conflicts": "MorphMan"
 }
