implemented "ignore quotation marks"-option (#20)

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -20,10 +20,11 @@
       "difficulty_field_index": null
     }
   ],
-  "parse_ignore_bracket_contents": true,
+  "parse_ignore_quotation_marks": true,
+  "parse_ignore_bracket_contents": false,
   "parse_ignore_proper_nouns": true,
-  "parse_ignore_round_bracket_contents": true,
-  "parse_ignore_slim_round_bracket_contents": true,
+  "parse_ignore_round_bracket_contents": false,
+  "parse_ignore_slim_round_bracket_contents": false,
   "parse_ignore_suspended_cards_content": true,
   "recalc_before_sync": false,
   "recalc_interval_for_known": 21,
