prittified json files

--- a/ankimorphs/manifest.json
+++ b/ankimorphs/manifest.json
@@ -1,5 +1,7 @@
 {
-  "package": "ankimorphs-alpha",
+  "conflicts": [
+    "MorphMan"
+  ],
   "name": "ankimorphs-alpha",
-  "conflicts": ["MorphMan"]
+  "package": "ankimorphs-alpha"
 }
