--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -1,28 +1,28 @@
 {
   "filters": [
     {
-      "note_type": "",
-      "note_type_id": null,
-      "tags": [
-        ""
-      ],
+      "difficulty_field": "",
+      "difficulty_field_index": null,
       "field": "",
       "field_index": null,
-      "morphemizer_description": "",
-      "morphemizer_name": "",
-      "read": true,
-      "modify": true,
       "focus_morph_field": "",
       "focus_morph_field_index": null,
       "highlighted_field": "",
       "highlighted_field_index": null,
-      "difficulty_field": "",
-      "difficulty_field_index": null
+      "modify": true,
+      "morphemizer_description": "",
+      "morphemizer_name": "",
+      "note_type": "",
+      "note_type_id": null,
+      "read": true,
+      "tags": [
+        ""
+      ]
     }
   ],
-  "parse_ignore_quotation_marks": true,
   "parse_ignore_bracket_contents": false,
   "parse_ignore_proper_nouns": true,
+  "parse_ignore_quotation_marks": true,
   "parse_ignore_round_bracket_contents": false,
   "parse_ignore_slim_round_bracket_contents": false,
   "parse_ignore_suspended_cards_content": true,
@@ -30,8 +30,8 @@
   "recalc_interval_for_known": 21,
   "recalc_prioritize_collection": true,
   "recalc_prioritize_textfile": false,
-  "shortcut_browse_ready_same_unknown": "L",
   "shortcut_browse_all_same_unknown": "Shift+L",
+  "shortcut_browse_ready_same_unknown": "L",
   "shortcut_learn_now": "Ctrl+Alt+N",
   "shortcut_recalc": "Ctrl+M",
   "shortcut_set_known_and_skip": "K",
@@ -40,9 +40,8 @@
   "skip_show_num_of_skipped_cards": true,
   "skip_stale_cards": true,
   "skip_unknown_morph_seen_today_cards": true,
-  "tag_not_ready": "am-not-ready",
-  "tag_ready": "am-ready",
   "tag_known": "am-known",
-  "tag_learning": "am-learning"
+  "tag_learning": "am-learning",
+  "tag_not_ready": "am-not-ready",
+  "tag_ready": "am-ready"
 }
-
