--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+ci: # the pre-commit ci bot on github does not like repo: local
+    skip: [pylint, black, mypy]
+
 default_language_version:
   python: python3.9
 repos:
