renamed 'skip_stale_cards' config item

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -38,8 +38,8 @@
   "shortcut_set_known_and_skip": "K",
   "shortcut_settings": "Ctrl+O",
   "shortcut_view_morphemes": "Ctrl+Alt+V",
+  "skip_only_known_morphs_cards": true,
   "skip_show_num_of_skipped_cards": true,
-  "skip_stale_cards": true,
   "skip_unknown_morph_seen_today_cards": true,
   "tag_known": "am-known",
   "tag_learning": "am-learning",
