--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 ci: # the pre-commit ci bot on github does not like repo: local
     skip: [pylint, black, mypy]
+    autofix_prs: false
 
 default_language_version:
   python: python3.9
