removed automatic PR assignment

--- a/.github/workflows/auto-assign_issue.yml
+++ b/.github/workflows/auto-assign_issue.yml
@@ -1,9 +1,7 @@
-name: Issue/PR assignment
+name: Issue assignment
 
 on:
     issues:
-        types: [opened]
-    pull_request:
         types: [opened]
 
 jobs:
