--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -20,6 +20,7 @@
       "unknowns_field_index": null
     }
   ],
+  "frequency_list": "Frequency file not found",
   "parse_ignore_bracket_contents": false,
   "parse_ignore_names_morphemizer": true,
   "parse_ignore_names_textfile": false,
@@ -31,7 +32,7 @@
   "recalc_interval_for_known": 21,
   "recalc_on_sync": false,
   "recalc_prioritize_collection": true,
-  "recalc_prioritize_textfile": false,
+  "recalc_prioritize_frequency_list": false,
   "shortcut_browse_all_same_unknown": "Shift+L",
   "shortcut_browse_ready_same_unknown": "L",
   "shortcut_learn_now": "Ctrl+Alt+N",
