--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,10 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "monthly"
+    groups:
+      compatible-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
