--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -8,6 +8,8 @@
       "highlighted_field": "",
       "highlighted_field_index": null,
       "modify": true,
+      "morph_priority": "",
+      "morph_priority_index": null,
       "morphemizer_description": "",
       "morphemizer_name": "",
       "note_type": "",
