added "suspend new cards with only known morphs"-option (#71)
- also made recalc functions private

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -29,12 +29,10 @@
   "parse_ignore_quotation_marks": true,
   "parse_ignore_round_bracket_contents": false,
   "parse_ignore_slim_round_bracket_contents": false,
-  "parse_ignore_suspended_cards_content": true,
-  "recalc_before_sync": false,
+  "parse_ignore_suspended_cards_content": false,
   "recalc_interval_for_known": 21,
   "recalc_on_sync": false,
-  "recalc_prioritize_collection": true,
-  "recalc_prioritize_frequency_list": false,
+  "recalc_suspend_known_new_cards": false,
   "shortcut_browse_all_same_unknown": "Shift+L",
   "shortcut_browse_ready_same_unknown": "L",
   "shortcut_learn_now": "Ctrl+Alt+N",
@@ -45,7 +43,9 @@
   "skip_only_known_morphs_cards": true,
   "skip_show_num_of_skipped_cards": true,
   "skip_unknown_morph_seen_today_cards": true,
-  "tag_known": "am-known",
+  "tag_known_automatically": "am-known-automatically",
+  "tag_known_manually": "am-known-manually",
+  "tag_learn_card_now": "am-learn-card-now",
   "tag_learning": "am-learning",
   "tag_not_ready": "am-not-ready",
   "tag_ready": "am-ready"
